--- a/package.json
+++ b/package.json
@@ -9,21 +9,31 @@
     "preview": "vite preview",
     "server": "node server.js",
     "start": "npm run build && npm run server",
-    "dev:full": "concurrently \"npm run dev\" \"npm run server\""
+    "dev:full": "concurrently \"npm run dev\" \"npm run server\"",
+    "install:deps": "npm install",
+    "setup": "npm run install:deps && echo 'Please create a .env file with your GEMINI_API_KEY'",
+    "lint": "echo 'Linting not configured yet'",
+    "clean": "rm -rf dist node_modules"
   },
   "dependencies": {
-    "@google-cloud/text-to-speech": "^6.3.0",
-    "@google/genai": "^1.16.0",
+    "@google/generative-ai": "^0.21.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0",
+    "react-dom": "^19.1.1",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
     "cors": "^2.8.5",
-    "concurrently": "^8.2.2"
+    "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.0",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0",
+    "concurrently": "^8.2.2",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35"
   }
 }
