feat: Add Netlify build script to package.json for deployment automation
Introduced a new script in package.json to facilitate automated builds for Netlify deployment. This addition enhances the development workflow while maintaining existing project structure and dependencies.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "install:deps": "npm install",
     "setup": "npm run install:deps && echo 'Please create a .env file with your GEMINI_API_KEY'",
     "lint": "echo 'Linting not configured yet'",
-    "clean": "rm -rf dist node_modules"
+    "clean": "rm -rf dist node_modules",
+    "netlify:build": "npm run build"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
