chore: Clean up package.json and remove unused server files
Removed unnecessary dependencies and scripts from package.json, including server-related packages and scripts for nodemon and concurrently. Deleted server.js and start-dev.js files to streamline the project structure. Updated package-lock.json accordingly. These changes maintain existing design elements and color palettes while improving project organization.

--- a/package.json
+++ b/package.json
@@ -7,25 +7,16 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "node server.js",
-    "server:dev": "nodemon server.js",
-    "start": "npm run build && npm run server",
-    "dev:full": "concurrently --kill-others \"npm run dev\" \"npm run server:dev\"",
-    "dev:check": "node -e \"console.log('Checking environment...'); if (!require('fs').existsSync('.env')) { console.error('❌ .env file not found'); process.exit(1); } console.log('✅ .env file exists'); if (!require('dotenv').config().parsed?.GEMINI_API_KEY) { console.error('❌ GEMINI_API_KEY not found in .env'); process.exit(1); } console.log('✅ GEMINI_API_KEY configured'); console.log('Starting development servers...');\" && npm run dev:full",
-    "dev:safe": "node start-dev.js",
+    "start": "npm run build",
     "install:deps": "npm install",
     "setup": "npm run install:deps && echo 'Please create a .env file with your GEMINI_API_KEY'",
     "lint": "echo 'Linting not configured yet'",
     "clean": "rm -rf dist node_modules",
     "netlify:build": "npm run build",
-    "health:check": "curl -f http://localhost:3001/api/health || echo 'Backend server not responding'"
+    "netlify:dev": "netlify dev"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
@@ -35,8 +26,6 @@
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.1.10",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.8.2",
