chore: Update .gitignore and README for environment variable clarity
Added the .netlify folder to .gitignore to prevent local Netlify configurations from being tracked. Updated README and package.json to clarify the environment variable setup by removing the VITE_ prefix from GEMINI_API_KEY instructions. These changes maintain existing design elements and color palettes while improving documentation accuracy.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "start": "npm run build",
     "install:deps": "npm install",
-    "setup": "npm run install:deps && echo 'Please create a .env file with your GEMINI_API_KEY'",
+    "setup": "npm run install:deps && echo 'Please create a .env file with GEMINI_API_KEY (no VITE_ prefix needed)'",
     "lint": "echo 'Linting not configured yet'",
     "clean": "rm -rf dist node_modules",
     "netlify:build": "npm run build",
